fixed spacing issue in sections, reduced padding by 8%

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ h2{
     color: white;
     width: 100%;
     overflow-x: hidden;
-    padding: 16% 0;
+    padding: 8% 0;
 }
 
 /*.push{
